[tool.poetry]
name = "pyrogram_utils"
version = "0.1.0"
description = "A set of Pyrogram utilities"
readme = "README.md"
authors = ["Pylakey <pylakey@example.com>"]
license = "MIT"
homepage = "https://github.com/pylakey/pyrogram_utils"
repository = "https://github.com/pylakey/pyrogram_utils"
packages = [
    { include = "pyrogram_utils" },
]
include = [
    "README.md",
]
classifiers = [
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.6"
pyrogram = { git = "https://github.com/pylakey/pyrogram" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
